[CHORE] set default image emote render strategy & remove emote mapping enum & remove triple for emote parsing result